SubBt/force-app/main/default/objects/Expense_To_Budget_Item_Link__c/Expense_To_Budget_Item_Link__c.object-meta.xml
<CustomObject>
    <label>Expense To Budget Item Link</label>
    <nameField>
        <displayFormat>EXB-{0000}</displayFormat>
        <label>Expense To Budget Item Link Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expense To Budget Item Link</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>