SubBt/force-app/main/default/objects/Expense_To_Budget_Item_Link__c/fields/Amount_Formula__c.field-meta.xml
<CustomField>
    <fullName>Amount_Formula__c</fullName>
    <formula>Expense__r.Total_Expense__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>