SubBt/force-app/main/default/objects/Expense_To_Budget_Item_Link__c/fields/Auto_Roll_Up__c.field-meta.xml
<CustomField>
    <fullName>Auto_Roll_Up__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Roll Up</label>
    <type>Checkbox</type>
</CustomField>