SubBt/force-app/main/default/objects/Expense_To_Budget_Item_Link__c/fields/Budget_Line__c.field-meta.xml
<CustomField>
    <fullName>Budget_Line__c</fullName>
    <label>Budget Line</label>
    <referenceTo>Budget_Item__c</referenceTo>
    <relationshipLabel>Expense To Budget Item Link</relationshipLabel>
    <relationshipName>Expense_To_Budget_Item_Link</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>