SubBt/force-app/main/default/objects/Expense_To_Budget_Item_Link__c/fields/Expense__c.field-meta.xml
<CustomField>
    <fullName>Expense__c</fullName>
    <label>Expense</label>
    <referenceTo>Expense__c</referenceTo>
    <relationshipLabel>Expense To Budget Item Link</relationshipLabel>
    <relationshipName>Expense_To_Budget_Item_Link</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>